k8s/overlays/prod/patch-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-server
spec:
  selector:
    matchLabels:
      app: app-server
  template:
    spec:
      containers:
        - name: app
